--- a/css/style.css
+++ b/css/style.css
@@ -169,8 +169,14 @@
     }
     
     #container button:hover{
-        background-position: left bottom;
+        color: #111;
     }
+
+    #container button:active{
+        color: #fff;
+        background: #252217;
+    }
+    
 
 
     @media only screen and (max-width: 820px) {
